<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="8dp">

        <HorizontalScrollView
            android:id="@+id/sv_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/pp1"
                    app:civ_border_color="@android:color/darker_gray"
                    app:civ_border_width="4dp"
                    android:layout_marginStart="16dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/pp2"
                    app:civ_border_color="@android:color/darker_gray"
                    app:civ_border_width="4dp"
                    android:layout_marginStart="16dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/pp3"
                    app:civ_border_color="@android:color/darker_gray"
                    app:civ_border_width="4dp"
                    android:layout_marginStart="16dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/pp4"
                    app:civ_border_color="@android:color/darker_gray"
                    app:civ_border_width="4dp"
                    android:layout_marginStart="16dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/pp5"
                    app:civ_border_color="@android:color/darker_gray"
                    app:civ_border_width="4dp"
                    android:layout_marginStart="16dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/pp6"
                    app:civ_border_color="@android:color/darker_gray"
                    app:civ_border_width="4dp"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/pp1"
                app:civ_border_color="@android:color/darker_gray"
                app:civ_border_width="4dp"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/post3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/pp4"
                app:civ_border_color="@android:color/darker_gray"
                app:civ_border_width="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andrian"
                android:textSize="20sp"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/post2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/pp2"
                app:civ_border_color="@android:color/darker_gray"
                app:civ_border_width="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aprillia"
                android:textSize="20sp"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/post1"/>

    </LinearLayout>
</ScrollView>